examples/test/testpolicy11317.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11317
  namespace: namespace230
spec:
  podSelector:
    matchLabels:
      key15: value18
      key32: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value14
          key45: value32
      podSelector:
        matchLabels:
          key26: value22
          key42: value29
